<resources>
    <!-- Global -->
    <string name="app_name">Working Together</string>

    <!-- Spanish -->
    <string name="layout_signin_name">Iniciar sesión</string>
    <string name="layout_signup_name">Registro</string>
    <string name="layout_dashboard_name">Tablero</string>
    <string name="layout_notifications_tray_name">Notificaciones</string>
    <string name="layout_activities_name">Actividades</string>
    <string name="layout_homeworks_name">Tareas</string>
    <string name="layout_messages_name">Mensajes</string>
    <string name="layout_support_name">Soporte técnico</string>
    <string name="layout_about_name">Acerca de Working Together</string>
    <string name="layout_contacts_name">Selecciona un contacto</string>
    <string name="layout_parent_notes_name">Calificaciones</string>
    <string name="layout_parent_semaphore_name">Semáforo</string>
    <string name="layout_parent_students_name">Estudiantes</string>
    <string name="layout_teacher_homeworks_name">Enviar Tarea</string>
    <string name="layout_teacher_activities_name">Enviar actividad</string>
    <string name="layout_teacher_notes_name">Subir calificaciones</string>
    <string name="layout_teacher_students_name">Estudiantes</string>

    <string name="btn_signin">Iniciar sesión</string>
    <string name="btn_signup">Crear cuenta</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_support">Enviar correo</string>
    <string name="forgot_password_msg">¿Olvidaste tu contraseña?</string>
    <string name="btn_parent_account">Soy un Familiar</string>
    <string name="btn_teacher_account">Soy un Profesor</string>

    <string name="etxt_user">Correo electrónico</string>
    <string name="etxt_password">Contraseña</string>
    <string name="etxt_confirm_password">Confirmar contraseña</string>

    <string name="etxt_name">Nombre</string>
    <string name="etxt_lastname">Apellidos</string>
    <string name="etxt_email">Correo electrónico</string>
    <string name="etxt_title">Titulo</string>
    <string name="etxt_description">Descripción</string>


    <string name="etxt_deliver_date">Fecha de entrega</string>
    <string name="etxt_attach_url">Adjuntar URL</string>
    <string name="etxt_attach_file">Adjuntar archivo</string>

    <string name="txt_signin_msg">Bienvenido a Working Together. ¡Si tienes una cuenta con nosotros, ingresa tus datos para comenzar!</string>
    <string name="txt_create_homework_msg">Ingresa la información de la tarea, después has clic en el botón enviar para publicarla</string>
    <string name="txt_create_activity_msg">Ingresa la información de la actividad, después has clic en el botón enviar para publicarla</string>
    <string name="txt_messages_empty_tray_msg">Aun no tienes mensajes</string>
    <string name="txt_messages_empty_tray_msg2">Inicia una conversación con alguno de tus contactos, o espera a recibir un mensaje</string>
    <string name="txt_contacts_empty_tray_msg">Aun no tienes ningun contacto</string>
    <string name="txt_homework_empty_tray_msg">Aun no tienes tareas</string>
    <string name="txt_homework_empty_tray_msg2">No te preocupes, aquí aparecerán cuando tengas alguna</string>
    <string name="txt_activity_empty_tray_msg">Aun no tienes actividades</string>
    <string name="txt_activity_empty_tray_msg2">No te preocupes, aquí aparecerán cuando tengas alguna</string>
    <string name="txt_notifications_empty_tray_msg">Aun no tienes notificaciones</string>
    <string name="txt_notifications_empty_tray_msg2">No te preocupes, te avisaremos cuando llegue una</string>
    <string name="txt_notes_empty_tray_msg">Aun no tienes calificaciones</string>
    <string name="txt_notes_empty_tray_msg2">No te preocupes, aquí aparecerán cuando tengas alguna</string>
    <string name="txt_support_msg">¿Necesitas ayuda? Escríbenos</string>
    <string name="txt_support_msg2">Envíanos un correo en donde nos cuentes en que podemos ayudarte, tan pronto como sea posible nos pondremos en contacto contigo</string>
    <string name="txt_about_msg">Acerca de</string>
    <string name="txt_about_copyright_msg">© 2018 Working Together. Todos los derechos reservados.</string>
    <string name="txt_signup_msg">Crea tu cuenta gratuita</string>
    <string name="txt_signup_msg_2">Comenzemos, antes que nada necesitamos algunos datos para crear tu cuenta, nosotros te guiaremos, primero necesitamos saber que tipo de cuenta vas a crear:</string>
    <string name="txt_no_account_msg">¿Aun no tienes cuenta? Crea una gratis</string>

    <string name="semaphore_red_status_name">Rojo</string>
    <string name="semaphore_red_status_msg">Tu desempeño es muy bajo, trabaja mas duro.</string>
    <string name="semaphore_yellow_status_name">Amarillo</string>
    <string name="semaphore_yellow_status_msg">Nada mal, esfuerzate un poco mas.</string>
    <string name="semaphore_green_status_name">Verde</string>
    <string name="semaphore_green_status_msg">Tu desempeño ha sido muy bueno, muchas felicidades.</string>

    <string name="dialog_attach_url_confirm_button">Adjuntar URL</string>
    <string name="dialog_attach_url_msg">Escribe la dirección de la pagina web que quieres adjuntar</string>

    <string name="write_message_chart">Escribe un mensaje</string>

    <string name="action_delete">Eliminar</string>

    <!-- Dialogs -->
    <string name="positive_button">Aceptar</string>
    <string name="negative_button">Cancelar</string>

    <string name="successful_published_homework_msg">"La tarea se publico con exito"</string>
    <string name="successful_published_activity_msg">"La actividad se publico con exito"</string>

    <string name="wrong_user_msg">Contraseña o usuario incorrecto</string>
    <string name="insert_password_msg">Ingresa tu contraseña</string>
    <string name="insert_mail_msg">Ingresa tu correo electrónico</string>

    <string name="select_delivery_date_msg">Selecciona una fecha de entrega</string>
    <string name="insert_description_msg">Ingresa una descripción</string>
    <string name="insert__title_msg">Ingresa un titulo</string>

    <!-- Notifications Channels -->
    <string name="homeworks_channel_name">Taraeas</string>
    <string name="homeworks_channel_description">Tareas</string>

    <!--Filter views-->
    <string name="filter_view_http">filter_view_http</string>
    <string name="profile_picture_content_desciption">Profile picture</string>
    <string name="show_all_notifications_button">Mostrar todas las notificaciones</string>

    <!--    Images content desciptions-->
    <string name="app_logo_content_description">App\'s logo: A sided bee</string>

</resources>
