<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context=".Signup">

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_signin_msg"
            android:textAlignment="center"
            android:textSize="@dimen/txt_subtitle_text_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_signup_name_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_name"
                android:imeOptions="flagNoExtractUi"
                android:textSize="@dimen/etxt_text_size"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_signup_lastname_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_name_etxt"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_lastname"
                android:imeOptions="flagNoExtractUi"
                android:textSize="@dimen/etxt_text_size"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_signup_email_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_lastname_etxt"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_email"
                android:imeOptions="flagNoExtractUi"
                android:textSize="@dimen/etxt_text_size"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_signin_pass_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_email_etxt"
            android:layout_marginTop="@dimen/margin"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_password"
                android:imeOptions="flagNoExtractUi"
                android:textSize="@dimen/etxt_text_size"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_signin_confirm_pass_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signin_pass_etxt"
            android:layout_marginTop="@dimen/margin"
            app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etxt_confirm_password"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/etxt_text_size"
            android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_signin_signin_btn"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@+id/activity_signin_confirm_pass_etxt"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/positive_button_shape"
            android:text="@string/btn_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />

    </RelativeLayout>

</ScrollView>