<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/double_padding">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/emty_tray_squared_icon_size"
            android:layout_height="@dimen/emty_tray_squared_icon_size"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/half_margin"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="" />

        <TextView
            android:id="@+id/welcome_message_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/half_margin"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/txt_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_message_textview"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/half_margin"
            android:text="@string/txt_about_msg"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/txt_subtitle_text_size" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_about_copyright_msg"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/txt_small_text_size" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview2"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/double_margin" />

    </RelativeLayout>

</ScrollView>