<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/double_margin"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="@dimen/txt_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/half_margin"
            android:text="Segundo paso"
            android:textAlignment="center"
            android:textSize="@dimen/txt_title_text_size" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_name_etxt"
            android:layout_width="@dimen/etxt_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_name"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:textSize="@dimen/etxt_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_lastname_etxt"
            android:layout_width="@dimen/etxt_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_name_etxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_lastname"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:textSize="@dimen/etxt_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_email_etxt"
            android:layout_width="@dimen/etxt_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_lastname_etxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_email"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/etxt_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signin_pass_etxt"
            android:layout_width="@dimen/etxt_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_email_etxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:textSize="@dimen/etxt_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signin_confirm_pass_etxt"
            android:layout_width="@dimen/etxt_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signin_pass_etxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_confirm_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:textSize="@dimen/etxt_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

</ScrollView>